--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     window.$docsify = {
       logo: '/_media/logo.png',
       name: '<span>文献阅读笔记<span>', // 文档标题，会显示在侧边栏顶部
-      repo: 'https://github.com/ZhiliangMa/easyio-lib-for-esp32', // 右上角Github图标链接
+      repo: 'https://github.com/yangkunl/docs', // 右上角Github图标链接
       loadNavbar: true, // 默认加载 _navbar.md，作为顶部导航栏
       loadSidebar: true, // 默认加载 _sidebar.md，作为侧边栏
       autoHeader: false,
