--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       loadNavbar: true, // 默认加载 _navbar.md，作为顶部导航栏
       loadSidebar: true, // 默认加载 _sidebar.md，作为侧边栏
       autoHeader: false,
-      subMaxLevel: 4, // 生成目录的最大层级
+      subMaxLevel: 5, // 生成目录的最大层级
       coverpage: true, //docsify便会默认加载 _coverpage.md，来作为封面的格式
     //   plugins: [
     //   EditOnGithubPlugin.create(
@@ -37,7 +37,7 @@
     // )],
       search: {
         paths: 'auto',
-        placeholder: '搜索',
+        placeholder: 'Searching',
         noData: '找不到结果',
         depth: 3,
       },
