--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
   <!--https://osiris-ui.github.io/osiris/#/quick-start-->
   <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/buble.css">-->
   <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/dark.css">-->
+  <!-- Add this to your HTML file, usually in your index.html -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/themes/prism.min.css">
+
 
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/pure.css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css" />
+  <link rel="stylesheet" href="custom.css">
   <!-- 公式 -->
 <!--  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css" />-->
   <!--  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">-->
@@ -35,7 +39,20 @@
     //           'https://github.com/yangkunl/docs.doc',
     //            null,
     // )],
+       plugins: [
+          function (hook, vm) {
+            hook.beforeEach(function (content) {
+              // 在每个页面加载前手动初始化 clipboard.js
+              var clipboard = new ClipboardJS('.copy-button');
+              clipboard.on('success', function (e) {
+                e.clearSelection();
+              });
+              return content;
+            });
+          }
+        ],
       search: {
+        maxAge: 86400000,
         paths: 'auto',
         placeholder: 'Searching',
         noData: '找不到结果',
@@ -65,28 +82,40 @@
         inlineMath   : [['$', '$'], ['\\(', '\\)']], // default
         displayMath  : [['$$', '$$']],               // default
       },
-      pagination: {
-        previousText: '上一章节',
-        nextText: '下一章节',
-      },
     }
   </script>
-  <!--在回到顶部 -->
-  <script type="text/javascript">
-    $(document).ready(function () {
-      $.goup({
-        trigger: 100,
-        bottomOffset: 32,
-        locationOffset: 32,
-        title: 'TOP',
-        titleAsText: true
+  <!-- Your Markdown file -->
+
+<!--  <div class="code-block">-->
+<!--    <button class="copy-button" data-clipboard-target="#my-code">Copy</button>-->
+<!--    <pre id="my-code"><code>-->
+<!--    # Your code here-->
+<!--    print("Hello, World!")-->
+<!--    </code></pre>-->
+<!--  </div>-->
+
+<!-- Include this script to initialize clipboard.js -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var clipboard = new ClipboardJS('.copy-button');
+
+      clipboard.on('success', function (e) {
+        e.clearSelection();
       });
     });
   </script>
-  <script src="https://wugenqiang.github.io/CS-Notes/plugin/jquery.js"></script>
-  <script src="https://wugenqiang.github.io/CS-Notes/plugin/jquery.goup.js"></script>
 
   <!--在github上编辑  -->
+
+<!--  <script src="plugins/search.js"></script>-->
+
+<!--  <script src="plugins/hightlight.js"></script>-->
+<!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>-->
+<!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>-->
+  <!-- Add this to your HTML file, usually in your index.html or main.js -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-python.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
    <!-- 美化提示 -->
   <script src="//cdn.jsdelivr.net/npm/docsify-plugin-flexible-alerts"></script>
