--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="app">加载中</div>
   <script>
     window.$docsify = {
-      logo: '/_media/logo.png',
+      logo: '/_media/log2.png',
       name: '<span>文献阅读笔记<span>', // 文档标题，会显示在侧边栏顶部
       repo: 'https://github.com/yangkunl/docs', // 右上角Github图标链接
       loadNavbar: true, // 默认加载 _navbar.md，作为顶部导航栏
