--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
     //           'https://github.com/yangkunl/docs.doc',
     //            null,
     // )],
+       markdown: {
+            renderer: {
+                image: function(href, title, text) {
+                    // 按照原来的渲染 img
+                    var image_html = this.origin.image.apply(this, arguments)
+                    // 用 figure 包一下图片，实现居中
+                    return '<figure>' + image_html + '<figcaption>'  +
+                        '</figcaption></figure>'
+                }
+            }
+        },
+
        plugins: [
           function (hook, vm) {
             hook.beforeEach(function (content) {
@@ -88,6 +100,11 @@
       },
     }
   </script>
+  <style>
+  figure {
+      text-align: center
+  }
+</style>
   <!-- Your Markdown file -->
 
 <!--  <div class="code-block">-->
