--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- Add this to your HTML file, usually in your index.html -->
   <link rel="stylesheet" href="night.css" id="night-mode-stylesheet">
   <link rel="stylesheet" href="custom.css" id="day-mode-stylesheet">
+  <link rel="stylesheet" href="//unpkg.com/mermaid/dist/mermaid.min.css" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/themes/prism.min.css">
 
@@ -30,6 +31,8 @@
 <body>
   <div id="app">加载中</div>
   <script>
+    // var num = 0;
+    // mermaid.initialize({ startOnLoad: false });
     window.$docsify = {
       logo: '/_media/log2.png',
       name: '<span>文献阅读笔记<span>', // 文档标题，会显示在侧边栏顶部
@@ -39,11 +42,12 @@
       autoHeader: false,
       subMaxLevel: 5, // 生成目录的最大层级
       coverpage: true, //docsify便会默认加载 _coverpage.md，来作为封面的格式
-    //   plugins: [
-    //   EditOnGithubPlugin.create(
-    //           'https://github.com/yangkunl/docs.doc',
-    //            null,
-    // )],
+      onlyCover: true,
+      copyCode: {
+          buttonText: 'copy code',
+          errorText: 'Error',
+          successText: 'Copied',
+        },
        markdown: {
             renderer: {
                 image: function(href, title, text) {
@@ -52,22 +56,29 @@
                     // 用 figure 包一下图片，实现居中
                     return '<figure>' + image_html + '<figcaption>'  +
                         '</figcaption></figure>'
-                }
-            }
-        },
+                },
+            //   code: function(code, lang) {
+            //         if (lang === "mermaid") {
+            //         return (
+            //           '<div class="mermaid">' + mermaid.render('mermaid-svg-' + num++, code) + "</div>"
+            //         );
+            //      }
+            //       return this.origin.code.apply(this, arguments);
+            // }
+        }},
 
-       plugins: [
-          function (hook, vm) {
-            hook.beforeEach(function (content) {
-              // 在每个页面加载前手动初始化 clipboard.js
-              var clipboard = new ClipboardJS('.copy-button');
-              clipboard.on('success', function (e) {
-                e.clearSelection();
+        plugins: [
+              function (hook, vm) {
+              hook.ready(function () {
+              mermaid.initialize({ startOnLoad: false });
               });
-              return content;
-            });
-          }
-        ],
+              hook.doneEach(function () {
+              mermaid.init(undefined, '.mermaid');
+             });
+         }
+      ],
+
+
       search: {
         maxAge: 86400000,
         paths: 'auto',
@@ -107,15 +118,6 @@
   }
 </style>
   <!-- Your Markdown file -->
-
-<!--  <div class="code-block">-->
-<!--    <button class="copy-button" data-clipboard-target="#my-code">Copy</button>-->
-<!--    <pre id="my-code"><code>-->
-<!--    # Your code here-->
-<!--    print("Hello, World!")-->
-<!--    </code></pre>-->
-<!--  </div>-->
-
 <!-- Include this script to initialize clipboard.js -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
@@ -151,7 +153,9 @@
 <!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>-->
 <!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>-->
   <!-- Add this to your HTML file, usually in your index.html or main.js -->
+  <script src="//unpkg.com/docsify@latest/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
+  <script type="text/javascript" src="//unpkg.com/mermaid/dist/mermaid.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-python.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
@@ -159,7 +163,8 @@
    <!-- 美化提示 -->
   <script src="//cdn.jsdelivr.net/npm/docsify-plugin-flexible-alerts"></script>
   <!--在所有的代码块上添加一个简单的Click to copy按钮来允许用户从你的文档中轻易地复制代码-->
-  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
+  <!-- Latest v2.x.x -->
+<script src="https://unpkg.com/docsify-copy-code@2"></script>
   <!-- emoji表情支持 -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
   <!-- 图片放大缩小支持 -->
@@ -177,9 +182,6 @@
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <!-- 搜索插件 -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-  <!-- 一键复制插件 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
-<!--  <script src="//cdn.jsdelivr.net/npm/docsify-latex@0"></script>-->
   <!-- 代码高亮 -->
 <!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>-->
 <!--  <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>-->
