--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/pure.css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css" />
 <!--  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/buble.css">-->
-
   <!-- 公式 -->
 <!--  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css" />-->
   <!--  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">-->
@@ -153,6 +152,21 @@
 <!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>-->
 <!--  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>-->
   <!-- Add this to your HTML file, usually in your index.html or main.js -->
+  <script src="https://giscus.app/client.js"
+        data-repo="yangkunl/docs"
+        data-repo-id="R_kgDOKp-UpQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOKp-Upc4CbcZJ"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+  </script>
   <script src="//unpkg.com/docsify@latest/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
   <script type="text/javascript" src="//unpkg.com/mermaid/dist/mermaid.min.js"></script>
