--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     // var num = 0;
     // mermaid.initialize({ startOnLoad: false });
     window.$docsify = {
-      logo: '/_media/log2.png',
+      logo: '_media/log2.png',
       name: '<span>文献阅读笔记<span>', // 文档标题，会显示在侧边栏顶部
       repo: 'https://github.com/yangkunl/docs', // 右上角Github图标链接
       loadNavbar: true, // 默认加载 _navbar.md，作为顶部导航栏
