--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Kunlin Yang</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
-  <link rel="shortcut icon" href="/_media/log2.png">
+  <link rel="shortcut icon" href="_media/log2.png">
   <style>
       body:not(.ready) {
         overflow: auto;
