--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     },
       hideCode: {
         scroll: false, // Enable scrolling
-        height: 100 // Max height
+        height: 300 // Max height
     },
       copyCode: {
           buttonText: 'copy code',
@@ -149,6 +149,11 @@
   </script>
   <!-- Your Markdown file -->
 <!-- Include this script to initialize clipboard.js -->
+  <style>
+  figure {
+      text-align: center
+  }
+  </style>
   <script>
   function toggleMode() {
     const dayModeStylesheet = document.getElementById('day-mode-stylesheet');
